--- a/files/css/style.css
+++ b/files/css/style.css
@@ -2467,6 +2467,10 @@ line-height: 2;
 	line-height: 1;
 }
 
+.family-price {
+	padding-bottom: 50px;
+}
+
 /* ------ WE-HELP ------ */
 
 .familyfin-we-help {
